[package]
authors = [""]
description = "Command-Line Tool for Airdropping Tokens with the Transfer-Hook Extension."
edition = "2021"
homepage = "https://spl.solana.com/token"
license = "Apache-2.0"
name = "transfer-hook-airdrop"
repository = ""
version = "0.1.0"

[[bin]]
name = "thook"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
solana-clap-v3-utils = "1.18.5"
solana-clap-utils = "1.18.2"
solana-cli-config = "1.18.2"
solana-client = "1.18.2"
solana-logger = "1.18.2"
solana-remote-wallet = "1.18.2"
solana-sdk = "1.18.2"
spl-transfer-hook-interface = { version = "0.5" }
spl-tlv-account-resolution = { version = "0.5.1" ,  features = ["serde-traits"] }
strum = "0.26"
strum_macros = "0.26"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_yaml = "0.9.31"
spl-token-client = "0.8.0"
csv = "1.3.0"
spl-token-2022 = "2.0.1"
spl-token-cli = "3.4.1"
spl-associated-token-account = "3.0.2"

[dev-dependencies]
solana-test-validator = "1.18.2"
spl-token-2022 = { version = "2.0.1",  features = ["no-entrypoint"] }
spl-token-client = { version = "0.8"}

[[bin]]
name = "transfer-hook-airdrop"
path = "src/main.rs"
